[dotfiles] Add solarized configuration

--- a/dotfiles/Makefile
+++ b/dotfiles/Makefile
@@ -1,13 +1,15 @@
-all: .vimrc .alacritty.yml
+all:
 
 .PHONY: sync install
 
-install: .vimrc .alacritty.yml
-	cp $(HOME)/.vimrc /tmp/.vimrc.prev
-	cp $(HOME)/.alacritty.yml /tmp/.alacritty.yml
+install:
+	cp .tmux.conf $(HOME)/.tmux.conf
 	cp .vimrc $(HOME)/.vimrc
 	cp .alacritty.yml $(HOME)/.alacritty.yml
+	mkdir -p $(HOME)/.vim/colors
+	cp solarized.vim $(HOME)/.vim/colors/
 
 sync:
 	cp $(HOME)/.vimrc .vimrc
 	cp $(HOME)/.alacritty.yml .alacritty.yml
+	cp $(HOME)/.tmux.conf .tmux.conf
