--- a/dotfiles/.alacritty.yml
+++ b/dotfiles/.alacritty.yml
@@ -11,86 +11,54 @@ font:
     family: Menlo
   size: 18
 
-# Colors (Solarized Dark)
+# colors:
+#   primary:
+#     background: '#002b36' # base03
+#     foreground: '#839496' # base0
+#   cursor:
+#     text:   '#002b36' # base03
+#     cursor: '#839496' # base0
+#   normal:
+#     black:   '#073642' # base02
+#     red:     '#dc322f' # red
+#     green:   '#859900' # green
+#     yellow:  '#b58900' # yellow
+#     blue:    '#268bd2' # blue
+#     magenta: '#d33682' # magenta
+#     cyan:    '#2aa198' # cyan
+#     white:   '#eee8d5' # base2
+#   bright:
+#     black:   '#002b36' # base03
+#     red:     '#cb4b16' # orange
+#     green:   '#586e75' # base01
+#     yellow:  '#657b83' # base00
+#     blue:    '#839496' # base0
+#     magenta: '#6c71c4' # violet
+#     cyan:    '#93a1a1' # base1
+#     white:   '#fdf6e3' # base3
+
 colors:
-  # Default colors
   primary:
-    background: '#002b36' # base03
-    foreground: '#839496' # base0
-
-  # Cursor colors
-  cursor:
-    text:   '#002b36' # base03
-    cursor: '#839496' # base0
-
-  # Normal colors
+    background: '#22272e'
+    foreground: '#adbac7'
   normal:
-    black:   '#073642' # base02
-    red:     '#dc322f' # red
-    green:   '#859900' # green
-    yellow:  '#b58900' # yellow
-    blue:    '#268bd2' # blue
-    magenta: '#d33682' # magenta
-    cyan:    '#2aa198' # cyan
-    white:   '#eee8d5' # base2
-
-  # Bright colors
+    black:   '#22272e'
+    red:     '#f47067'
+    green:   '#8ddb8c'
+    yellow:  '#f69d50'
+    blue:    '#6cb6ff'
+    magenta: '#dcbdfb'
+    cyan:    '#96d0ff'
+    white:   '#adbac7'
   bright:
-    black:   '#002b36' # base03
-    red:     '#cb4b16' # orange
-    green:   '#586e75' # base01
-    yellow:  '#657b83' # base00
-    blue:    '#839496' # base0
-    magenta: '#6c71c4' # violet
-    cyan:    '#93a1a1' # base1
-    white:   '#fdf6e3' # base3
-
-#colors:
-#  primary:
-#    background: '#000000'
-#    foreground: '#dedede'
-#  normal:
-#    black:      '#000000'
-#    red:        '#c01c28'
-#    green:      '#26a269'
-#    yellow:     '#f4b400'
-#    blue:       '#2a7bde'
-#    magenta:    '#c061cb'
-#    cyan:       '#2aa1b3'
-#    white:      '#dedede'
-#  bright:
-#    black:      '#2d333b'
-#    black:      '#5e5c64'
-#    red:        '#c01c28'
-#    green:      '#26a269'
-#    yellow:     '#f4b400'
-#    blue:       '#2a7bde'
-#    magenta:    '#c061cb'
-#    cyan:       '#2aa1b3'
-#    white:      '#dedede'
-
-#colors:
-#  primary:
-#    background: '#22272e'
-#    foreground: '#adbac7'
-#  normal:
-#    black:   '#22272e'
-#    red:     '#f47067'
-#    green:   '#8ddb8c'
-#    yellow:  '#f69d50'
-#    blue:    '#6cb6ff'
-#    magenta: '#dcbdfb'
-#    cyan:    '#96d0ff'
-#    white:   '#adbac7'
-#  bright:
-#    black:   '#768390'
-#    red:     '#f47067'
-#    green:   '#8ddb8c'
-#    yellow:  '#f69d50'
-#    blue:    '#6cb6ff'
-#    magenta: '#dcbdfb'
-#    cyan:    '#96d0ff'
-#    white:   '#adbac7'
+    black:   '#768390'
+    red:     '#f47067'
+    green:   '#8ddb8c'
+    yellow:  '#f69d50'
+    blue:    '#6cb6ff'
+    magenta: '#dcbdfb'
+    cyan:    '#96d0ff'
+    white:   '#adbac7'
 
 cursor:
   style: Block
