--- a/arm/Makefile
+++ b/arm/Makefile
@@ -3,11 +3,11 @@ all: kernel8.img
 boot.o: boot.S
 	aarch64-linux-gnu-as boot.S -o boot.o -c
 
-kernel.o: kernel.cpp
-	aarch64-linux-gnu-g++ -std=c++20 kernel.cpp -o kernel.o -ffreestanding -c -O2 -Wall -Wextra
+main.o: main.c
+	aarch64-linux-gnu-gcc -std=c11 main.c -o main.o -ffreestanding -c -O2 -Wall -Wextra
 
-kernel8.elf: boot.o kernel.o
-	aarch64-linux-gnu-ld boot.o kernel.o -T link.ld -o kernel8.elf
+kernel8.elf: boot.o main.o
+	aarch64-linux-gnu-ld boot.o main.o -T link.ld -o kernel8.elf
 
 kernel8.img: kernel8.elf
 	aarch64-linux-gnu-objcopy kernel8.elf -O binary kernel8.img
