arm: add 'hello world'

--- a/arm/Makefile
+++ b/arm/Makefile
@@ -1,10 +1,10 @@
 all: kernel8.img
 
 boot.o: boot.S
-	aarch64-linux-gnu-as boot.S -o boot.o -c
+	aarch64-linux-gnu-as boot.S -o boot.o -c -g
 
-main.o: main.c
-	aarch64-linux-gnu-gcc -std=c11 main.c -o main.o -ffreestanding -c -O2 -Wall -Wextra
+main.o: main.cc
+	aarch64-linux-gnu-g++ -std=c++17 main.cc -o main.o -ffreestanding -c -Og -Wall -Wextra -g
 
 kernel8.elf: boot.o main.o
 	aarch64-linux-gnu-ld boot.o main.o -T link.ld -o kernel8.elf
@@ -15,4 +15,4 @@ kernel8.img: kernel8.elf
 .PHONY: test
 
 test: kernel8.img
-	qemu-system-aarch64 -M raspi3 -kernel kernel8.img -serial null -serial stdio
+	qemu-system-aarch64 -M raspi3 -kernel kernel8.img -serial null -serial stdio -display none --trace memory_region_ops_write
