--- a/dotfiles/.alacritty.yml
+++ b/dotfiles/.alacritty.yml
@@ -11,54 +11,34 @@ font:
     family: Menlo
   size: 12
 
-# colors:
-#   primary:
-#     background: '#002b36' # base03
-#     foreground: '#839496' # base0
-#   cursor:
-#     text:   '#002b36' # base03
-#     cursor: '#839496' # base0
-#   normal:
-#     black:   '#073642' # base02
-#     red:     '#dc322f' # red
-#     green:   '#859900' # green
-#     yellow:  '#b58900' # yellow
-#     blue:    '#268bd2' # blue
-#     magenta: '#d33682' # magenta
-#     cyan:    '#2aa198' # cyan
-#     white:   '#eee8d5' # base2
-#   bright:
-#     black:   '#002b36' # base03
-#     red:     '#cb4b16' # orange
-#     green:   '#586e75' # base01
-#     yellow:  '#657b83' # base00
-#     blue:    '#839496' # base0
-#     magenta: '#6c71c4' # violet
-#     cyan:    '#93a1a1' # base1
-#     white:   '#fdf6e3' # base3
-
+# Colors (Solarized Dark)
 colors:
+  # Default colors
   primary:
-    background: '#22272e'
-    foreground: '#adbac7'
+    background: '0x002b36'
+    foreground: '0x839496'
+
+  # Normal colors
   normal:
-    black:   '#22272e'
-    red:     '#f47067'
-    green:   '#8ddb8c'
-    yellow:  '#f69d50'
-    blue:    '#6cb6ff'
-    magenta: '#dcbdfb'
-    cyan:    '#96d0ff'
-    white:   '#adbac7'
+    black:   '0x073642'
+    red:     '0xdc322f'
+    green:   '0x859900'
+    yellow:  '0xb58900'
+    blue:    '0x268bd2'
+    magenta: '0xd33682'
+    cyan:    '0x2aa198'
+    white:   '0xeee8d5'
+
+  # Bright colors
   bright:
-    black:   '#768390'
-    red:     '#f47067'
-    green:   '#8ddb8c'
-    yellow:  '#f69d50'
-    blue:    '#6cb6ff'
-    magenta: '#dcbdfb'
-    cyan:    '#96d0ff'
-    white:   '#adbac7'
+    black:   '0x002b36'
+    red:     '0xcb4b16'
+    green:   '0x586e75'
+    yellow:  '0x657b83'
+    blue:    '0x839496'
+    magenta: '0x6c71c4'
+    cyan:    '0x93a1a1'
+    white:   '0xfdf6e3'
 
 cursor:
   style: Block
