--- a/software-renderer/Makefile
+++ b/software-renderer/Makefile
@@ -1,9 +1,7 @@
-
-
 all: a.out
 
 a.out: main.cpp
-	$(CXX) -std=c++20 -g $< -Wall -Werror -O2 -o $@ -fsanitize=address -ffast-math -fno-exceptions
+	$(CXX) -std=c++20 -g $^ -Wall -Werror -O2 -o $@ -fsanitize=address -ffast-math -fno-exceptions
 
 .PHONY: test
 
