--- a/dotfiles/.alacritty.yml
+++ b/dotfiles/.alacritty.yml
@@ -17,10 +17,10 @@ cursor:
 # The 'Dark dimmed' colorscheme from Github.
 colors:
   primary:
-    background: '#2d333b'
+    background: '#22272e'
     foreground: '#adbac7'
   normal:
-    black:   '#2d333b'
+    black:  '##22272e'
     red:     '#f47067'
     green:   '#8ddb8c'
     yellow:  '#f69d50'
