software-renderer: Convert from C++ to C

--- a/software-renderer/Makefile
+++ b/software-renderer/Makefile
@@ -1,9 +1,12 @@
 all: a.out
 
-a.out: main.cpp
-	$(CXX) -std=c++20 -g $^ -Wall -Werror -O2 -o $@ -fsanitize=address -ffast-math -fno-exceptions
+a.out: main.c
+	$(CC) -std=gnu11 -g $^ -Wall -Werror -O0 -o $@ -fsanitize=address -ffast-math
 
-.PHONY: test
+.PHONY: test test_mac
 
 test: a.out
 	./a.out && feh out.tga
+
+test_mac: a.out
+	./a.out && open out.tga
