software-renderer: update makefile for unified test target

--- a/software-renderer/Makefile
+++ b/software-renderer/Makefile
@@ -3,10 +3,12 @@ all: a.out
 a.out: main.c
 	$(CC) -std=gnu11 -g $^ -Wall -Werror -O0 -o $@ -fsanitize=address -ffast-math
 
-.PHONY: test test_mac
+.PHONY: test
+
+IMAGE_VIEWER := feh
+ifeq ($(shell uname -s),Darwin)
+	IMAGE_VIEWER := open
+endif
 
 test: a.out
-	./a.out && feh out.tga
-
-test_mac: a.out
-	./a.out && open out.tga
+	./a.out && $(IMAGE_VIEWER) out.tga
