--- a/dotfiles/.alacritty.yml
+++ b/dotfiles/.alacritty.yml
@@ -20,9 +20,11 @@ cursor:
 colors:
   primary:
     background: '#2d333b'
+    background: '#22272e'
     foreground: '#adbac7'
   normal:
     black:   '#2d333b'
+    black:   '#22272e'
     red:     '#f47067'
     green:   '#8ddb8c'
     yellow:  '#f69d50'
