--- a/dotfiles/.alacritty.yml
+++ b/dotfiles/.alacritty.yml
@@ -26,6 +26,7 @@ colors:
   # Normal colors
   normal:
     black:   '0x073642'
+    black:   '0x002b36'
     red:     '0xdc322f'
     green:   '0x859900'
     yellow:  '0xb58900'
