--- a/c/swr/Makefile
+++ b/c/swr/Makefile
@@ -1,7 +1,7 @@
 all: swr
 
 swr: main.c
-	$(CC) -std=gnu99 -g -O0 -ffast-math -fsanitize=address $< -o $@
+	$(CC) -std=gnu99 -O2 -ffast-math -fsanitize=address $< -o $@
 
 .PHONY: test
 
