--- a/dotfiles/.alacritty.yml
+++ b/dotfiles/.alacritty.yml
@@ -46,7 +46,6 @@ cursor:
 #    cyan:    '0x93a1a1'
 #    white:   '0xfdf6e3'
 
-# The 'Dark dimmed' colorscheme from Github.
 colors:
   primary:
     background: '#2d333b'
@@ -62,9 +61,14 @@ colors:
     black:   '#202124'
     black:   '#171717'
     red:     '#f47067'
+    red:     '#ed4c3d'
     green:   '#8ddb8c'
+    green:   '#137333'
+    green:   '#3aac5b'
+    yellow:  '#fcc203'
     yellow:  '#f69d50'
     blue:    '#6cb6ff'
+    blue:    '#4c90f6'
     magenta: '#dcbdfb'
     cyan:    '#96d0ff'
     white:   '#adbac7'
@@ -77,6 +81,7 @@ colors:
     green:   '#8ddb8c'
     yellow:  '#f69d50'
     blue:    '#6cb6ff'
+    blue:    '#4c90f6'
     magenta: '#dcbdfb'
     cyan:    '#96d0ff'
     white:   '#adbac7'
