--- a/swr2/Makefile
+++ b/swr2/Makefile
@@ -1,8 +1,8 @@
 all: swr
 
-CFLAGS  := -std=c11 -O0 -fsanitize=address -ffast-math
-HEADERS :=
-SOURCES := main.c
+CFLAGS  := -std=c11 -O0 -fsanitize=address -ffast-math -pedantic -Wall
+HEADERS := math.h tga.h
+SOURCES := main.c math.c tga.c
 
 swr: $(HEADERS) $(SOURCES)
 	$(CC) $(CFLAGS) $(SOURCES) -o $@
