--- a/swr2/Makefile
+++ b/swr2/Makefile
@@ -1,11 +1,11 @@
 all: swr
 
-CFLAGS  := -std=c11 -O0 -fsanitize=address -ffast-math -pedantic -Wall
-HEADERS := math.h tga.h
-SOURCES := main.c math.c tga.c
+CXXFLAGS := -std=c++20 -O0 -fno-exceptions -fsanitize=address -ffast-math -pedantic -Wall
+HEADERS := math.hh tga.hh
+SOURCES := main.cc math.cc tga.cc
 
 swr: $(HEADERS) $(SOURCES)
-	$(CC) $(CFLAGS) $(SOURCES) -o $@
+	time $(CXX) $(CXXFLAGS) $(SOURCES) -o $@
 
 .PHONY: test
 
