--- a/swr2/Makefile
+++ b/swr2/Makefile
@@ -1,8 +1,8 @@
 all: swr
 
-CXXFLAGS := -std=c++20 -O0 -fno-exceptions -fsanitize=address -ffast-math -pedantic -Wall
-HEADERS := math.hh tga.hh
-SOURCES := main.cc math.cc tga.cc
+CXXFLAGS := -std=gnu++20 -O0 -fno-exceptions -ffast-math -Wall -Werror
+HEADERS := math.hh tga.hh vec.hh vec.cc obj.hh
+SOURCES := main.cc math.cc tga.cc obj.cc
 
 swr: $(HEADERS) $(SOURCES)
 	time $(CXX) $(CXXFLAGS) $(SOURCES) -o $@
