--- a/swr2/Makefile
+++ b/swr2/Makefile
@@ -1,7 +1,7 @@
 all: swr
 
-CXXFLAGS := -std=gnu++20 -O0 -fno-exceptions -ffast-math -Wall -Werror
-HEADERS := math.hh tga.hh vec.hh vec.cc obj.hh
+CXXFLAGS := -std=gnu++20 -O0 -fno-exceptions -ffast-math -Wall -Werror -fsanitize=address
+HEADERS := math.hh tga.hh vec.hh obj.hh
 SOURCES := main.cc math.cc tga.cc obj.cc
 
 swr: $(HEADERS) $(SOURCES)
