--- a/dotfiles/.alacritty.yml
+++ b/dotfiles/.alacritty.yml
@@ -33,12 +33,15 @@ colors:
   normal:
     black: '#000000'
     blue: '#0000bb'
+    blue: '#5555ff'
     cyan: '#00bbbb'
+    cyan: '#55ffff'
     green: '#00bb00'
     magenta: '#bb00bb'
     red: '#bb0000'
     white: '#bbbbbb'
     yellow: '#bbbb00'
+    yellow: '#ffff55'
   primary:
     background: '#000000'
     foreground: '#bbbbbb'
