--- a/ml/Makefile
+++ b/ml/Makefile
@@ -2,7 +2,7 @@ target := ml
 
 all: $(target)
 
-CFLAGS := -std=c11 -g -O0 -ffast-math -Wall -Werror -fsanitize=address -DDEBUG -pedantic
+CFLAGS := -std=c11 -g -O0 -ffast-math -fsanitize=address -DDEBUG -pedantic -Wall
 
 $(target): main.c
 	time $(CC) $(CFLAGS) -o $@ $<
