--- a/ml/Makefile
+++ b/ml/Makefile
@@ -1,13 +1,21 @@
-target := ml
+TARGET := ml
+TARGET2 := ml2
 
-all: $(target)
+all: $(TARGET) $(TARGET2)
 
 CFLAGS := -std=c11 -g -O2 -ffast-math -fsanitize=address -DDEBUG -pedantic -Wall
+CXXFLAGS := -std=c++20 -g -O0 -ffast-math -fsanitize=address -DDEBUG -pedantic -Wall
 
-$(target): main.c
+$(TARGET): main.c
 	time $(CC) $(CFLAGS) -o $@ $<
 
-.PHONY: test
+$(TARGET2): main.cpp
+	time $(CXX) $(CXXFLAGS) -o $@ $<
+
+.PHONY: test test2
 
 test: $(target)
 	./$(target)
+
+test2: $(TARGET2)
+	./$(TARGET2)
