--- a/pdc2/Makefile
+++ b/pdc2/Makefile
@@ -2,10 +2,10 @@ TARGET := pdc
 
 all: $(TARGET)
 
-CXXFLAGS := -std=gnu++20 -O0 -fno-exceptions -ffast-math -Wall -Werror -fsanitize=address
+CFLAGS := -std=c11 -O0 -g -ffast-math -Wall -Werror -fsanitize=address
 
-$(TARGET): main.cpp
-	time $(CXX) $(CXXFLAGS) $< -o $@
+$(TARGET): main.c
+	time $(CC) $(CFLAGS) $< -o $@
 
 .PHONY: test
 
