--- a/ml/Makefile
+++ b/ml/Makefile
@@ -1,21 +1,13 @@
 TARGET := ml
-TARGET2 := ml2
 
-all: $(TARGET) $(TARGET2)
+all: $(TARGET)
 
-CFLAGS := -std=c11 -g -O2 -ffast-math -fsanitize=address -DDEBUG -pedantic -Wall
-CXXFLAGS := -std=c++20 -g -O0 -ffast-math -fsanitize=address -DDEBUG -pedantic -Wall
+CFLAGS := -std=gnu11 -g -O0 -ffast-math -fsanitize=address -DDEBUG -Wall
 
 $(TARGET): main.c
 	time $(CC) $(CFLAGS) -o $@ $<
 
-$(TARGET2): main.cpp
-	time $(CXX) $(CXXFLAGS) -o $@ $<
+.PHONY: test
 
-.PHONY: test test2
-
-test: $(target)
-	./$(target)
-
-test2: $(TARGET2)
-	./$(TARGET2)
+test: $(TARGET)
+	./$(TARGET)
