--- a/pdc2/Makefile
+++ b/pdc2/Makefile
@@ -2,10 +2,17 @@ TARGET := pdc
 
 all: $(TARGET)
 
+HEADERS := $(wildcard *.h)
+SOURCES := $(wildcard *.c)
+OBJECTS := $(patsubst %.c,%.o,$(SOURCES))
+
 CFLAGS := -std=gnu11 -O0 -g -ffast-math -Wall -Werror -fsanitize=address
 
-$(TARGET): main.c
-	time $(CC) $(CFLAGS) $< -o $@
+%.o: %.c $(HEADERS)
+	time $(CC) -c $(CFLAGS) -o $@ $<
+
+$(TARGET): $(OBJECTS)
+	time $(CC) $(CFLAGS) -o $@ $^
 
 .PHONY: test
 
