--- a/pdc2/Makefile
+++ b/pdc2/Makefile
@@ -2,13 +2,19 @@ TARGET := pdc
 
 all: $(TARGET)
 
-HEADERS := $(wildcard *.h)
-SOURCES := $(wildcard *.c)
-OBJECTS := $(patsubst %.c,%.o,$(SOURCES))
-CFLAGS := -std=gnu17 -O0 -g -ffast-math -Wall -Werror -fsanitize=address
+HEADERS	:= $(wildcard *.h)
+SOURCES	:= $(wildcard *.c)
+OBJECTS	:= $(patsubst %.c,%.o,$(SOURCES))
+CFLAGS	:= -std=gnu17 -O0 -g -ffast-math -Wall -Werror -fsanitize=address
 
 %.o: %.c $(HEADERS)
 	time $(CC) -c $(CFLAGS) -o $@ $<
+
+%.ll: %.c $(HEADERS)
+	time $(CC) $(CFLAGS) -S -emit-llvm -o $@ $<
+
+%.s: %.c $(HEADERS)
+	time $(CC) $(CFLAGS) -S -o $@ $<
 
 $(TARGET): $(OBJECTS)
 	time $(CC) $(CFLAGS) -o $@ $^
