--- a/pdc2/Makefile
+++ b/pdc2/Makefile
@@ -9,16 +9,16 @@ CFLAGS	:= -std=gnu17 -O2 -ffast-math -Wall -Werror
 ASAN	:= -fsanitize=address
 
 %.o: %.c $(HEADERS)
-	time $(CC) -c $(CFLAGS) $(ASAN) -o $@ $<
+	$(CC) -c $(CFLAGS) $(ASAN) -o $@ $<
 
 %.ll: %.c $(HEADERS)
-	time $(CC) $(CFLAGS) -S -emit-llvm -o $@ $<
+	$(CC) $(CFLAGS) -S -emit-llvm -o $@ $<
 
 %.s: %.c $(HEADERS)
-	time $(CC) $(CFLAGS) -S -o $@ $<
+	$(CC) $(CFLAGS) -S -o $@ $<
 
 $(TARGET): $(OBJECTS)
-	time $(CC) $(CFLAGS) $(ASAN) -o $@ $^
+	$(CC) $(CFLAGS) $(ASAN) -o $@ $^
 
 .PHONY: test clean
 
