--- a/pdc2/Makefile
+++ b/pdc2/Makefile
@@ -9,7 +9,7 @@ CFLAGS	:= -std=gnu17 -O2 -ffast-math -Wall -Werror
 ASAN	:= -fsanitize=address
 
 %.o: %.c $(HEADERS)
-	$(CC) -c $(CFLAGS) $(ASAN) -o $@ $<
+	$(CC) $(CFLAGS) $(ASAN) -c -o $@ $<
 
 %.ll: %.c $(HEADERS)
 	$(CC) $(CFLAGS) -S -emit-llvm -o $@ $<
