--- a/n64/Makefile
+++ b/n64/Makefile
@@ -2,20 +2,21 @@ TARGET := n64
 
 all: $(TARGET)
 
-HEADERS := $(wildcard *.hh)
-SOURCES := $(wildcard *.cc)
-OBJECTS := $(patsubst %.cc,%.o,$(SOURCES))
+HEADERS  := $(wildcard *.hh)
+SOURCES  := $(wildcard *.cc)
+OBJECTS  := $(patsubst %.cc,%.o,$(SOURCES))
 #OBJECTS += metal.o
-FLAGS   := -std=c++20 -O2 -fno-exceptions -ffast-math -Wall -Werror
-ASAN    := -fsanitize=address
-LIBS    := -lvulkan -lglfw
-#LIBS    += -framework Cocoa -framework IOKit -framework CoreFoundation
+FLAGS    := -std=c++20 -g -O0 -fno-exceptions -ffast-math -Wall -Werror
+ASAN     := -fsanitize=address
+INCLUDES := -Iglfw/include
+LIBS     := -lvulkan -lglfw3 -Lglfw/build/src
+LIBS     += -framework Cocoa -framework IOKit
 
 metal.o: metal.mm
 	$(CXX) $(FLAGS) -c -o $@ $<
 
 %.o: %.cc $(HEADERS)
-	$(CXX) $(FLAGS) $(ASAN) -c -o $@ $<
+	$(CXX) $(FLAGS) $(ASAN) $(INCLUDES) -c -o $@ $<
 
 %.ll: %.cc $(HEADERS)
 	$(CXX) $(FLAGS) -S -emit-llvm -o $@ $<
