--- a/ml/Makefile
+++ b/ml/Makefile
@@ -5,7 +5,7 @@ all: $(TARGET)
 CFLAGS := -std=gnu11 -g -O0 -ffast-math -fsanitize=address -DDEBUG -Wall
 
 $(TARGET): main.c
-	time $(CC) $(CFLAGS) -o $@ $<
+	$(CC) $(CFLAGS) -o $@ $<
 
 .PHONY: test
 
