--- a/dotfiles/.alacritty.yml
+++ b/dotfiles/.alacritty.yml
@@ -16,20 +16,32 @@ font:
     family: Menlo
   bold:
     style: Regular
-  size: 12
+  size: 13
 
 cursor:
   style: Block
 
 colors:
   primary:
-    background: '#111415'
-    foreground: '#bfc7cc'
-    foreground: '#8599b3'
-    foreground: '#a3aeb5'
+    background: '#2d333b'
+    background: '#22272e'
+    foreground: '#adbac7'
   normal:
-    black:      '#111415'
-    white:      '#bfc7cc'
-    white:      '#a3aeb5'
+    black:   '#2d333b'
+    black:   '#22272e'
+    red:     '#f47067'
+    green:   '#8ddb8c'
+    yellow:  '#f69d50'
+    blue:    '#6cb6ff'
+    magenta: '#dcbdfb'
+    cyan:    '#96d0ff'
+    white:   '#adbac7'
   bright:
-    black:      '#55626a'
+    black:   '#768390'
+    red:     '#f47067'
+    green:   '#8ddb8c'
+    yellow:  '#f69d50'
+    blue:    '#6cb6ff'
+    magenta: '#dcbdfb'
+    cyan:    '#96d0ff'
+    white:   '#adbac7'
