--- a/dotfiles/.alacritty.yml
+++ b/dotfiles/.alacritty.yml
@@ -20,3 +20,12 @@ font:
 
 cursor:
   style: Block
+
+colors:
+  primary:
+    foreground: '#999DA2'
+    background: '#171717'
+
+  normal:
+    black: '#171717'
+    white: '#999DA2'
