--- a/dotfiles/.alacritty.yml
+++ b/dotfiles/.alacritty.yml
@@ -14,19 +14,46 @@ font:
     family: Menlo
   bold:
     style: Regular
-  size: 14
+  size: 18
 
 cursor:
   style: Block
 
+    #colors:
+    #  primary:
+    #    foreground: '#999DA2'
+    #    background: '#171717'
+    #
+    #  normal:
+    #    black: '#171717'
+    #    white: '#999DA2'
+    #      #  green: '#80C159'
+    #      #bright:
+    #      #  green: '#80C159'
+    #
+
+# The 'Dark dimmed' colorscheme from Github.
 colors:
   primary:
-    foreground: '#999DA2'
-    background: '#171717'
-
+    background: '#2d333b'
+    background: '#22272e'
+    foreground: '#adbac7'
   normal:
-    black: '#171717'
-    white: '#999DA2'
-      #  green: '#80C159'
-      #bright:
-      #  green: '#80C159'
+    black:   '#2d333b'
+    black:   '#22272e'
+    red:     '#f47067'
+    green:   '#8ddb8c'
+    yellow:  '#f69d50'
+    blue:    '#6cb6ff'
+    magenta: '#dcbdfb'
+    cyan:    '#96d0ff'
+    white:   '#adbac7'
+  bright:
+    black:   '#768390'
+    red:     '#f47067'
+    green:   '#8ddb8c'
+    yellow:  '#f69d50'
+    blue:    '#6cb6ff'
+    magenta: '#dcbdfb'
+    cyan:    '#96d0ff'
+    white:   '#adbac7'
