--- a/swr4/Makefile
+++ b/swr4/Makefile
@@ -1,6 +1,6 @@
 all: a.out
 
-CXXFLAGS := -std=c++20 -g -O0 -ffast-math -fno-exceptions -Wall -Werror
+CXXFLAGS := -std=c++20 -g -O0 -ffast-math -fno-exceptions -Wall -Werror -fsanitize=address
 
 a.out: main.cpp
 	$(CXX) $(CXXFLAGS) -o $@ $<
