--- a/bresenham/Makefile
+++ b/bresenham/Makefile
@@ -1,6 +1,6 @@
 all: a.out
 
-CFLAGS := -std=gnu17 -O0 -Wall -Werror -g -fsanitize=address
+CFLAGS := -std=gnu17 -O0 -Wall -Werror -g
 
 a.out: main.c
 	$(CC) $(CFLAGS) $< -o $@
