--- a/dotfiles/.alacritty.yml
+++ b/dotfiles/.alacritty.yml
@@ -40,6 +40,7 @@ colors:
     background: '#2d333b'
     background: '#22272e'
     foreground: '#adbac7'
+    foreground: '#768390'
   normal:
     black:   '#2d333b'
     black:   '#22272e'
@@ -50,6 +51,7 @@ colors:
     magenta: '#dcbdfb'
     cyan:    '#96d0ff'
     white:   '#adbac7'
+    white:   '#768390'
   bright:
     black:   '#768390'
     red:     '#f47067'
