--- a/pc/Makefile
+++ b/pc/Makefile
@@ -1,9 +1,11 @@
 all: pc
 
 CFLAGS := -std=gnu17 -O0 -g -Wall -Werror
+LLVM := $(shell llvm-config --cflags --ldflags --libs core x86codegen --system-libs)
+LDFLAGS := -fno-rtti -lc++ $(LLVM)
 
 pc: main.c
-	$(CC) $(CFLAGS) $< -o $@
+	$(CC) $(CFLAGS) $< -o $@ $(LDFLAGS)
 
 .PHONY: test
 
